fixed modal glance positioning on mobile

--- a/core/static/scss/components/_modal.scss
+++ b/core/static/scss/components/_modal.scss
@@ -104,10 +104,6 @@
     display: block;
     padding: $spacing-small;
     cursor: pointer;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    left: 0;
     background-color: $green;
 
     .modal-title, .modal-subtitle {
@@ -127,6 +123,7 @@
     @media(min-width: $bp-horiz-large) {
         padding: 1rem; 
         opacity: 0;
+        position: absolute;
         top: 0;
         bottom: 0;
         right: 0;
